--- a/todo.txt
+++ b/todo.txt
@@ -2,7 +2,7 @@
 i) Alerta Normativa de Guille.
 ii ) Operación de CompraVenta Distrisam.
 iii) Art. Sebas: Regulación del juego.
-iv) Aviso en Apertura.
+iv) Aviso en Aperturaa
 
 areas de pracitca
 
